--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;900&family=Ubuntu&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="/images/technologist.png">
     <link rel="stylesheet" href="style.css" />
-    <title>🧑‍💻 Otar Dev</title>
+    <title>Otar Dev</title>
   </head>
   <body>
     <div class="nav-container">
