--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="gtu">
           <img
             class="gtu-logo"
-            src="./images/gtu.png"
+            src="./images/GTU.png"
             alt="georgian technical university"
           />
           <p class="university">
